--- a/investigate/config.yaml.template
+++ b/investigate/config.yaml.template
@@ -1,5 +1,6 @@
 DB_connection:
-  host: '127.0.0.1:3306'
+  connector: 'postgresql+psycopg2'
+  host: '127.0.0.1:5432'
   db_name: 'bills'
   bills_table_name: 'xml_bills'
   user: ''          # insert your credentials here
